<resources>
    <string name="facebook_app_id">1312046168970847</string>
    <string name="fb_login_protocol_scheme">fb1312046168970847</string>
    <string name="app_name">bookex</string>
    <string name="email_val">Email</string>
    <string name="pass_val">Password</string>
    <string name="log_val">Log In</string>
    <string name="reg_val">Register</string>
    <string name="registerd">If you don\'t have an account , please click here</string>
    <string name="succes">Succes!</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_main_login">MainLogin</string>
    <string name="google_login">Log in with Google!</string>
    <string name="email_login">Log in with Email!</string>
    <string name="facebook_login">Log in with Facebook!</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="email_verification">we have sent you an activation link on your email!</string>

    <string name="slide_1_title">Hello </string>
    <string name="slide_1_desc">The easiest way to find books!</string>

    <string name="slide_2_title">Chuj</string>
    <string name="slide_2_desc">HWDP</string>

    <string name="slide_3_title">hehehehehhehe</string>
    <string name="slide_3_desc">hehehhehehehehhehe</string>

    <string name="slide_4_title">hihihihihihi</string>
    <string name="slide_4_desc">hihihihihihihih</string>

    <string name="play_again_desc">hahahahahhahah</string>
    <string name="play_again">hahahhahahhahaha</string>

</resources>
