<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailLoginActivity">

    <Button
        android:id="@+id/loginBut"
        android:layout_width="305dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/log_val"
        app:layout_constraintBottom_toTopOf="@+id/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
        app:layout_constraintVertical_bias="0.672" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="324dp"
        android:layout_height="43dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="@string/registerd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/registerd" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="331dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_val"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pass_val"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>